<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:circular="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackGround"
    android:orientation="vertical"
    tools:context="uk.co.florisbooks.whenwinetastesbest.MainActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="@color/colorBackGround"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/datePickerIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="12dp"
            android:src="@drawable/ic_today_black_24dp" />

        <ImageView
            android:id="@+id/settingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:layout_marginLeft="20dp"
            android:padding="12dp"
            android:src="@drawable/ic_settings_black_24dp" />

        <ImageView
            android:id="@+id/infoIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:padding="12dp"
            android:src="@drawable/ic_info_outline_black_24dp" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:id="@+id/wineHeader"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="56dp">

            <uk.co.florisbooks.whenwinetastesbest.DateHeaderView
                android:id="@+id/dateHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintLeft_toRightOf="@+id/leftChevron"
                app:layout_constraintRight_toLeftOf="@+id/rightChevron"
                app:layout_constraintTop_toTopOf="parent"
                tools:background="@color/borderGrey" />

            <TextView
                android:id="@+id/timeText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="center"
                android:minEms="4"
                tools:text="14:40"
                android:textColor="@color/wineRed"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/dateHeader"
                app:layout_constraintRight_toRightOf="@+id/dateHeader"
                app:layout_constraintTop_toBottomOf="@+id/dateHeader" />

            <ImageView
                android:id="@+id/leftChevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="32dp"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintBottom_toBottomOf="@+id/dateHeader"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dateHeader" />

            <ImageView
                android:id="@+id/rightChevron"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:layout_marginRight="32dp"
                android:rotation="180"
                android:src="@drawable/ic_chevron_left"
                app:layout_constraintBottom_toBottomOf="@+id/dateHeader"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/dateHeader" />

            <View
                android:id="@+id/leftDivider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginEnd="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/wineVanilla"
                app:layout_constraintBottom_toBottomOf="@+id/timeText"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />


            <ImageSwitcher
                android:id="@+id/imgFruitLeft"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leftDivider" />

            <ImageSwitcher
                android:id="@+id/imgFruitRight"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leftDivider" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/good_for_wine_header"
                android:fontFamily="serif"
                android:textColor="@color/textBody"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="@+id/timeText"
                app:layout_constraintRight_toRightOf="@+id/timeText"
                app:layout_constraintTop_toBottomOf="@+id/timeText" />

            <TextView
                android:id="@+id/txtFavourable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="serif"
                android:gravity="top"
                tools:text="YES"
                android:textColor="@color/textBody"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="@+id/textView4"
                app:layout_constraintRight_toRightOf="@+id/textView4"
                app:layout_constraintTop_toBottomOf="@+id/textView4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal"
                app:layout_constraintTop_toBottomOf="@+id/txtFavourable">

                <TextView
                    android:id="@+id/winePeriodTypeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    tools:text="FLOWER"
                    android:textColor="@color/wineRed"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/upsell_panel"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:visibility="invisible"
            android:background="#f4eee3">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:fontFamily="serif"
                android:lineSpacingExtra="8sp"
                android:text="@string/upsell_title"
                android:textColor="#181818"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="8dp"
                android:lineSpacingExtra="9sp"
                android:text="@string/upsell_content"
                android:textColor="#282828"
                android:textSize="12sp"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintLeft_toLeftOf="@+id/textView2"
                app:layout_constraintRight_toRightOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/purchaseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="0dp"
                android:layout_marginTop="4dp"
                android:text="@string/purchase"
                app:layout_constraintRight_toRightOf="@+id/textView"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_margin="@dimen/wine_glass_padding"
        android:layout_weight="1">

        <ProgressBar
            android:id="@+id/vprogressbar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="624dp"
            android:layout_height="744dp"
            android:layout_gravity="center"
            android:progressDrawable="@drawable/wineholder"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="80dp">

            <ImageView
                android:id="@+id/wineGlass"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_marginBottom="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginTop="0dp"
                android:scaleType="fitCenter"
                android:src="@drawable/img_glass"
                app:layout_constraintBottom_toTopOf="@+id/guideline4"
                app:layout_constraintLeft_toLeftOf="@+id/guideline"
                app:layout_constraintRight_toLeftOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="@+id/guideline3" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/wine_glass_min_percent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="@dimen/wine_glass_max_percent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@dimen/wine_glass_min_percent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="@dimen/wine_glass_max_percent" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <uk.co.florisbooks.whenwinetastesbest.CircularSlider
            android:id="@+id/circular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="30dp"
            circular:angle="3.14"
            circular:border_color="#505090"
            circular:border_thickness="15dp"
            circular:thumb_image="@drawable/handle_pointer"
            circular:thumb_size="120dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />

        <uk.co.florisbooks.whenwinetastesbest.CircularSlider
            android:id="@+id/weekCircular"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:padding="30dp"
            android:visibility="invisible"
            circular:angle="3.14"
            circular:border_color="#505090"
            circular:border_thickness="20dp"
            circular:mode="week"
            circular:thumb_image="@drawable/handle_default"
            circular:thumb_size="100dp"
            tools:layout_editor_absoluteX="8dp"
            tools:layout_editor_absoluteY="8dp" />


    </FrameLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/modeTabLayout"
        style="@style/tab_layout_style"
        android:layout_height="40dp">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/day" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/week" />
    </com.google.android.material.tabs.TabLayout>


</LinearLayout>
